# learning_cpp20_programming_author_luoneng

./: CMakeLists.txt  README.md  build.sh  build_one.sh  env_variable.sh  run.sh
.github/workflows/: cmake-clang++.yml
attachment/书籍配套资源/code/template-metaprogramming/: a.out
src/: CMakeLists.txt
src/chapter_01/: benchmark_shape.cc  main.cc  shape.h
src/chapter_02/: dump_layout.sh  layout.cc  main.cc
src/chapter_03/: main.cc
src/chapter_04/: main.cc
src/chapter_05/: algorithm.h  collection.def  collection.h  graph_edsl.h  higher_order_functions.h  kv_table.h  main.cc  type_list.h
src/chapter_06/: concepts.h  main.cc
src/chapter_07/: chunk.h  concat.h  main.cc
src/chapter_08/: coroutine.txt  generator.h  has_operator.h  main.cc  maybe.h
src/chapter_09/: CMakeLists.txt  main.cc  math.cpp  math.cppm  point.cppm  rectangle.cpp  rectangle.cppm  shape.cppm
src/chapter_10/: CMakeLists.txt
src/chapter_10/10_1/: CMakeLists.txt  main.cc  schema.h
src/chapter_10/10_1/conf/: point.json  point3.json  point5.json  point6.json  test_tree.json  test_tree2.json
src/chapter_10/10_1/config_loader/: CMakeLists.txt  concepts.h  define_schema.h  enable_parser.h  load_to_obj.h  loader.h  macro.h  parser.h  result.h
src/chapter_10/10_1/config_loader/deserialize/: all_types.h
src/chapter_10/10_1/config_loader/deserialize/traits/: compound_deserialize.h  primitive_deserialize.h
src/chapter_10/10_1/config_loader/deserialize/type/: concepts_primitive.h  concepts_reflected.h  sequence_container.h  smart_pointer.h  std_optional.h  std_variant.h
src/chapter_10/10_1/config_loader/parser/: CMakeLists.txt  json_parser.cpp  json_parser.h  yaml_parser.cpp  yaml_parser.h
stdout/: chapter_01.txt  chapter_01_benchmark_shape.txt  chapter_02.txt  chapter_02_dump_layout.txt  chapter_07.txt
